@@ -57,7 +57,10 @@ extern void _keymgr_set_and_unlock_processwide_ptr (int, void *);
 extern void _keymgr_unlock_processwide_ptr (int);
 
 struct mach_header;
+struct mach_header_64;
 extern char *getsectdatafromheader (struct mach_header*, const char*,
+			const char *, unsigned long *);
+extern char *getsectdatafromheader_64 (struct mach_header*, const char*,
 			const char *, unsigned long *);
 
 /* This is referenced from KEYMGR_GCC3_DW2_OBJ_LIST.  */
@@ -151,11 +154,21 @@ examine_objects (void *pc, struct dwarf_eh_bases *bases, int dont_alloc)
 	char *fde;
 	unsigned long sz;
 
+#ifdef __ppc64__
+	fde = getsectdatafromheader_64 ((struct mach_header_64 *) image->mh,
+				     "__DATA", "__eh_frame", &sz);
+#else
 	fde = getsectdatafromheader (image->mh, "__DATA", "__eh_frame", &sz);
+#endif
 	if (fde == NULL)
 	  {
+#ifdef __ppc64__
+	    fde = getsectdatafromheader_64 ((struct mach_header_64 *) image->mh,
+					 "__TEXT", "__eh_frame", &sz);
+#else
 	    fde = getsectdatafromheader (image->mh, "__TEXT",
 					 "__eh_frame", &sz);
+#endif
 	    if (fde != NULL)
 	      image->examined_p |= IMAGE_IS_TEXT_MASK;
 	  }
